# cmpe195_tickrbot

./: README.md  bot.py  changelog.md  chart.py  main.py  pyproject.toml  quote.py
